fix(cluster-shield): fix globals in order to be alligned with sysdig-deploy

--- a/charts/cluster-shield/ci/existing_secrets-values.yaml
+++ b/charts/cluster-shield/ci/existing_secrets-values.yaml
@@ -1,7 +1,7 @@
 ---
 global:
   sysdig:
-    existingAccessKeySecret: "a-fake-secret-name"
+    accessKeySecret: "a-fake-secret-name"
 cluster_shield:
   cluster_config:
     name: "lint-cluster"
