--- a/charts/cluster-shield/values.yaml
+++ b/charts/cluster-shield/values.yaml
@@ -10,14 +10,13 @@ global:
     pullSecrets: []
     pullPolicy: IfNotPresent
   sysdig:
-    existingAccessKeySecret:
-    existingAccessKeySecretKeyName:
-    existingSecureApiTokenSecret:
-    existingSecureApiTokenSecretKeyName:
+    accessKeySecret:
     accessKey:
     apiHost:
     region: "custom"
+    secureAPITokenSecret:
     secureAPIToken:
+  imageRegistry:
   sslVerifyCertificate:
   ssl:
     ca:
