--- a/charts/cluster-shield/templates/deployment.yaml
+++ b/charts/cluster-shield/templates/deployment.yaml
@@ -30,7 +30,7 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       {{/* sysdig-deploy support start */}}
-      {{- else if .Values.global.imagePullSecrets }}
+      {{- else if .Values.global.image.pullSecrets }}
       imagePullSecrets:
         {{- toYaml .Values.global.image.pullSecrets | nindent 8 }}
       {{- end }}
