feat(cluster-shield,sysdig-deploy): bump cluster-shield to v0.11.0 and integrate it in sysdig-deploy (#1764)

--- a/charts/cluster-shield/ci/existing_secrets-values.yaml
+++ b/charts/cluster-shield/ci/existing_secrets-values.yaml
@@ -1,8 +1,7 @@
 ---
 global:
   sysdig:
-    existingAccessKeySecret: "a-fake-secret-name"
-    existingSecureApiTokenSecret: "another-fake-secr"
+    accessKeySecret: "a-fake-secret-name"
 cluster_shield:
   cluster_config:
     name: "lint-cluster"
