--- a/charts/registry-scanner/templates/configmap.yaml
+++ b/charts/registry-scanner/templates/configmap.yaml
@@ -28,6 +28,21 @@ data:
       {{- else }}
       skipTLS: {{ .Values.config.registrySkipTLS }}
       {{- end }}
+      {{- if .Values.config.registryMaxRetries }}
+      maxRetries: {{ .Values.config.registryMaxRetries }}
+      {{- else }}
+      maxRetries: 10
+      {{- end }}
+      {{- if .Values.config.registryMaxRetryWait }}
+      maxRetryWait: {{ .Values.config.registryMaxRetryWait }}
+      {{- else }}
+      maxRetryWait: 10m
+      {{- end }}
+      {{- if .Values.config.registryMinRetryWait }}
+      minRetryWait: {{ .Values.config.registryMinRetryWait }}
+      {{- else }}
+      minRetryWait: 5s
+      {{- end }}
       {{- if .Values.config.registryApiUrl }}
       api: {{ .Values.config.registryApiUrl }}
       {{- end }}
