fix(agent): fix path of CA certificate to be used for proxy
We're currently mounting the custom CA certificate under
/opt/draios/etc/ca-certs as it is the location where the agent
should normally look for it (i.e. the root install /opt/draios).
However, the current agent implementation will always
treat ca_certificate as a relative path and always prepend
/opt/draios, whereas http_proxy.ca_certificate will honor
an absolute path if such a path is specified.
So if we specify /etc/ca-certs/... for http_proxy.ca_certificate,
any SSL connection to the proxy will fail because that path
will not exist. It will however work for the CA certificate
against the collector due to the reason explained above.

On the other hand, using a relative path etc/ca-certs will work
in both cases, so this is what we should be using instead.

--- a/charts/agent/templates/configmap.yaml
+++ b/charts/agent/templates/configmap.yaml
@@ -42,7 +42,7 @@ data:
   {{- $baseSettings := mergeOverwrite $baseSettings (dict "promscrape_web_address" "127.0.0.1:9991") -}}
 {{- end }}
 {{- if and (eq (include "sysdig.custom_ca.enabled"  (dict "global" .Values.global.ssl "component" .Values.ssl)) "true") (.Values.sysdig.settings) (hasKey .Values.sysdig.settings "http_proxy") (hasKey (default dict .Values.sysdig.settings.http_proxy) "ssl") (eq (get (default (dict "ssl" false) .Values.sysdig.settings.http_proxy) "ssl") true) }}
-  {{- $caFilePath := printf "%s%s" "/etc/ca-certs/" (include "sysdig.custom_ca.keyName"  (dict "global" .Values.global.ssl "component" .Values.ssl)) }}
+  {{- $caFilePath := printf "%s%s" "etc/ca-certs/" (include "sysdig.custom_ca.keyName"  (dict "global" .Values.global.ssl "component" .Values.ssl)) }}
   {{- $mergedSettings := mergeOverwrite $baseSettings (dict "http_proxy" (dict "ca_certificate" $caFilePath)) -}}
   {{ toYaml $mergedSettings | nindent 4 }}
 {{- else if .Values.sysdig.settings }}
