chore(sysdig-deploy): bump cluster-shield to 1.0.1

--- a/.github/workflows/update-sysdig-deploy-chart.yaml
+++ b/.github/workflows/update-sysdig-deploy-chart.yaml
@@ -21,6 +21,7 @@ jobs:
             charts/admission-controller/*
             charts/agent/*
             charts/cluster-scanner/*
+            charts/cluster-shield/*
             charts/common/*
             charts/kspm-collector/*
             charts/node-analyzer/*
