--- a/charts/sysdig-deploy/tests/golden_template_test.yaml
+++ b/charts/sysdig-deploy/tests/golden_template_test.yaml
@@ -16,6 +16,21 @@ templates:
   - charts/nodeAnalyzer/templates/secrets.yaml
   - charts/nodeAnalyzer/templates/serviceaccount-node-analyzer.yaml
   - charts/nodeAnalyzer/templates/runtimeScanner/runtime-scanner-configmap.yaml
+kubernetesProvider:
+  scheme:
+    "v1/Node":
+      gvr:
+        version: "v1"
+        resource: "nodes"
+      namespaced: false
+  objects:
+  - apiVersion: v1
+    kind: Node
+    metadata:
+      name: fakenode
+    status:
+      nodeInfo:
+        osImage: fake-os-image
 tests:
   - it: Testing agent and node-analyzer deployed
     set:
