chore(cluster-shield): bump helm-unittest to v0.5.1

--- a/charts/cluster-shield/tests/proxy_settings_test.yaml
+++ b/charts/cluster-shield/tests/proxy_settings_test.yaml
@@ -80,6 +80,7 @@ tests:
           apiVersion: v1
           name: sysdig-cluster-shield-proxy
         template: templates/secrets.yaml
+        documentIndex: 1
       - equal:
           path: data.httpProxy
           decodeBase64: true
@@ -148,6 +149,7 @@ tests:
           apiVersion: v1
           name: sysdig-cluster-shield-proxy
         template: templates/secrets.yaml
+        documentIndex: 1
       - equal:
           path: data.httpProxy
           decodeBase64: true
