chore(agent): bump helm-unittest to v0.5.1

--- a/charts/agent/tests/ca_cert_test.yaml
+++ b/charts/agent/tests/ca_cert_test.yaml
@@ -5,6 +5,21 @@ templates:
   - templates/daemonset.yaml
   - templates/deployment.yaml
   - templates/secrets.yaml
+kubernetesProvider:
+  scheme:
+    "v1/Node":
+      gvr:
+        version: "v1"
+        resource: "nodes"
+      namespaced: false
+  objects:
+  - apiVersion: v1
+    kind: Node
+    metadata:
+      name: fakenode
+    status:
+      nodeInfo:
+        osImage: fake-os-image
 tests:
   - it: Checking Agent CA Cert Secret
     set:
