--- a/charts/agent/tests/conditional_flag_test.yaml
+++ b/charts/agent/tests/conditional_flag_test.yaml
@@ -1,6 +1,21 @@
 suite: Test conditional flags and its dependent changes
 templates:
   - daemonset.yaml
+kubernetesProvider:
+  scheme:
+    "v1/Node":
+      gvr:
+        version: "v1"
+        resource: "nodes"
+      namespaced: false
+  objects:
+  - apiVersion: v1
+    kind: Node
+    metadata:
+      name: fakenode
+    status:
+      nodeInfo:
+        osImage: fake-os-image
 tests:
   - it: Checking global gke autopilot
     set:
