--- a/charts/agent/tests/gke_test.yaml
+++ b/charts/agent/tests/gke_test.yaml
@@ -3,6 +3,21 @@ templates:
   - templates/configmap.yaml
   - templates/daemonset.yaml
   - templates/priorityclass.yaml
+kubernetesProvider:
+  scheme:
+    "v1/Node":
+      gvr:
+        version: "v1"
+        resource: "nodes"
+      namespaced: false
+  objects:
+  - apiVersion: v1
+    kind: Node
+    metadata:
+      name: fakenode
+    status:
+      nodeInfo:
+        osImage: fake-os-image
 tests:
   - it: Enable GKE Autopilot
     set:
