use httpGet probes instead of exec
There is a well-known memory leak in containerd
https://github.com/containerd/containerd/issues/7375
that will eventually cause the agent pod to be
restarted due to memory exhaustion.

To circumvent that, resort back to httpGet probe.
Notice how only security manager is probed
(being the most critical process) so the
connection manager remains unwatched.

--- a/charts/agent/templates/daemonset-windows.yaml
+++ b/charts/agent/templates/daemonset-windows.yaml
@@ -39,20 +39,20 @@ spec:
           image: "{{ .Values.windows.image.registry }}/{{ .Values.windows.image.repository }}:{{ .Values.windows.image.tag }}"
           imagePullPolicy: {{ .Values.windows.image.pullPolicy | default .Values.global.image.pullPolicy }}
           livenessProbe:
-            timeoutSeconds: 10
-            exec:
-              command:
-                - $env:CONTAINER_SANDBOX_MOUNT_POINT/Sysdig/Agent/healthprobe.bat
-                - "24483"
+            httpGet:
+              host: 127.0.0.1
+              path: /healthz
+              port: 24484
             initialDelaySeconds: 60
-            periodSeconds: 5
-          readinessProbe:
+            periodSeconds: 30
             timeoutSeconds: 10
-            exec:
-              command:
-                - $env:CONTAINER_SANDBOX_MOUNT_POINT/Sysdig/Agent/healthprobe.bat
-                - "24483"
-            initialDelaySeconds: 20
+          readinessProbe:
+            httpGet:
+              host: 127.0.0.1
+              path: /healthz
+              port: 24484
+            initialDelaySeconds: 60
+            timeoutSeconds: 10
           resources:
             {{- toYaml .Values.windows.resources | nindent 12 }}
           volumeMounts:
