--- a/charts/agent/values.yaml
+++ b/charts/agent/values.yaml
@@ -62,6 +62,34 @@ image:
   #
   # pullSecrets:
   #   - name: myRegistrKeySecretName
+windows:
+  enabled: false
+  nodeSelector: {}
+  image:
+    registry: quay.io
+    repository: sysdig/agent-windows
+    tag: 1.0.0
+    # Specify an imagePullPolicy
+    # Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
+    # ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
+    pullPolicy: []
+    # Optionally specify an array of imagePullSecrets.
+    # Secrets must be manually created in the namespace.
+    # ref: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
+    #
+    # pullSecrets:
+    #   - name: myRegistrKeySecretName
+  resources:
+    # sizing TBD
+    requests:
+      cpu: 250m
+      memory: 348Mi
+    limits:
+      cpu: 1000m
+      memory: 512Mi
+  affinity: {}
+  tolerations: []
+
 # Specify a predefined resource profile.
 #
 # Available options are:
