feat(agent): fix test after the unittest plugin upgrade

--- a/charts/agent/tests/security_context_constraints_test.yaml
+++ b/charts/agent/tests/security_context_constraints_test.yaml
@@ -6,6 +6,22 @@ capabilities:
   apiVersions:
     - security.openshift.io/v1
 
+kubernetesProvider:
+  scheme:
+    "v1/Node":
+      gvr:
+        version: "v1"
+        resource: "nodes"
+      namespaced: false
+  objects:
+  - apiVersion: v1
+    kind: Node
+    metadata:
+      name: fakenode
+    status:
+      nodeInfo:
+        osImage: fake-os-image
+
 tests:
   - it: Testing that SCS is not created if not enabled
     set:
