chore(agent): add /lib64 optional volume mount if autopilot is off

--- a/charts/agent/templates/daemonset.yaml
+++ b/charts/agent/templates/daemonset.yaml
@@ -142,6 +142,9 @@ spec:
             - mountPath: /host/usr
               name: usr-vol
               readOnly: true
+            - path: /host/usr/lib64
+              name: lib64-vol
+              readOnly: true
             {{- if (include "agent.ebpfEnabled" .) }}
             - mountPath: /root/.sysdig
               name: bpf-probes
@@ -295,6 +298,9 @@ spec:
               name: vardata-vol
             - mountPath: /host/var/run
               name: varrun-vol
+            - mountPath: /host/usr/lib64
+              name: lib64-vol
+              readOnly: true
             {{- if (include "agent.ebpfEnabled" .) }}
             - mountPath: /root/.sysdig
               name: bpf-probes
@@ -315,6 +321,9 @@ spec:
               name: vardata-vol
             - mountPath: /host/var/run
               name: varrun-vol
+            - mountPath: /host/usr/lib64
+              name: lib64-vol
+              readOnly: true
             {{- if (include "agent.ebpfEnabled" .) }}
             - mountPath: /root/.sysdig
               name: bpf-probes
@@ -441,6 +450,9 @@ spec:
         - name: varrun-vol
           hostPath:
             path: /var/run
+        - name: lib64-vol
+          hostPath:
+            path: /lib64
         {{- if (include "agent.ebpfEnabled" .) }}
         - name: bpf-probes
           emptyDir: {}
@@ -473,6 +485,9 @@ spec:
         - name: vardata-vol
           hostPath:
             path: /var/data
+        - name: lib64-vol
+          hostPath:
+            path: /lib64
         {{- if (include "agent.ebpfEnabled" .) }}
         - name: bpf-probes
           emptyDir: {}
