--- a/charts/node-analyzer/values.yaml
+++ b/charts/node-analyzer/values.yaml
@@ -155,6 +155,10 @@ nodeAnalyzer:
       key: node-role.kubernetes.io/etcd
       operator: Equal
       value: "true"
+    - effect: NoExecute
+      key: CriticalAddonsOnly
+      operator: Equal
+      value: "true"
 
   # Specify if the Priority Class needs to be created
   createPriorityClass: false
