--- a/charts/agent/tests/volumes_test.yaml
+++ b/charts/agent/tests/volumes_test.yaml
@@ -85,7 +85,7 @@ tests:
   - it: Ensure /lib64 host volume is mounted as /host/usr/lib64 in container
     asserts:
       - equal:
-          path: spec.template.spec.containers[*].volumeMounts[?(@.name == "lib64-vol")].mountPath
+          path: spec.template.spec.initContainers[*].volumeMounts[?(@.name == "lib64-vol")].mountPath
           value: /host/usr/lib64
       - equal:
           path: spec.template.spec.volumes[?(@.name == "lib64-vol")].hostPath.path
@@ -99,7 +99,7 @@ tests:
         autopilot: true
     asserts:
       - isNull:
-          path: spec.template.spec.containers[*].volumeMounts[?(@.name == "lib64-vol")]
+          path: spec.template.spec.initContainers[*].volumeMounts[?(@.name == "lib64-vol")]
       - isNull:
           path: spec.template.spec.volumes[?(@.name == "lib64-vol")]
     templates:
@@ -112,7 +112,7 @@ tests:
           autopilot: true
     asserts:
       - isNull:
-          path: spec.template.spec.containers[*].volumeMounts[?(@.name == "lib64-vol")]
+          path: spec.template.spec.initContainers[*].volumeMounts[?(@.name == "lib64-vol")]
       - isNull:
           path: spec.template.spec.volumes[?(@.name == "lib64-vol")]
     templates:
