chore(agent): add kmodule.extraVolumes to daemonset

--- a/charts/agent/templates/daemonset.yaml
+++ b/charts/agent/templates/daemonset.yaml
@@ -162,6 +162,10 @@ spec:
             - mountPath: /root/.sysdig
               name: bpf-probes
           {{- end }}
+
+          {{- if and (.Values.kmodule) (.Values.kmodule.extraVolumes) (.Values.kmodule.extraVolumes.mounts) }}
+            {{ toYaml .Values.kmodule.extraVolumes.mounts | nindent 12 }}
+          {{- end }}
       {{- end }}
       containers:
         - name: sysdig
@@ -515,6 +519,10 @@ spec:
 
       {{- if .Values.extraVolumes.volumes }}
         {{ toYaml .Values.extraVolumes.volumes | nindent 8 }}
+      {{- end }}
+
+      {{- if and (.Values.kmodule) (.Values.kmodule.extraVolumes) (.Values.kmodule.extraVolumes.volumes) }}
+        {{ toYaml .Values.kmodule.extraVolumes.volumes | nindent 8 }}
       {{- end }}
   updateStrategy:
     type: {{ .Values.daemonset.updateStrategy.type }}
