add option to set hostNetwork and dnsPolicy

--- a/charts/agent/templates/daemonset.yaml
+++ b/charts/agent/templates/daemonset.yaml
@@ -27,7 +27,11 @@ spec:
       tolerations:
         {{ toYaml .Values.tolerations | nindent 8 }}
       hostNetwork: true
+      {{- if .Values.dnsPolicy }}
+      dnsPolicy: {{ .Values.dnsPolicy }}
+      {{- else }}
       dnsPolicy: ClusterFirstWithHostNet
+      {{- end }}
       hostPID: true
       terminationGracePeriodSeconds: 5
       {{- if .Values.daemonset.nodeSelector }}
